<?xml version="1.0" encoding="utf-8"?>
<!-- Modified for Hacker's Keyboard v2; see the repository history for details. -->
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
        app:title="@string/pref_screen_feedback_title"
        app:key="feedback_settings">

    <CheckBoxPreference
            app:key="vibrate_on"
            app:title="@string/vibrate_on_keypress"
            app:persistent="true"
            />

    <com.baodeep.hackerskeyboard.VibratePreferenceCompat
            app:defaultValue="40"
            app:minValue="5"
            app:maxValue="200"
            app:logScale="true"
            app:displayFormat="%.0f ms"
            app:key="vibrate_len"
            app:title="@string/title_vibrate_len"
            app:persistent="true"
            />

    <CheckBoxPreference
            app:key="sound_on"
            app:title="@string/sound_on_keypress"
            app:persistent="true"
            />

    <ListPreference
            app:key="pref_click_method"
            app:title="@string/title_click_method"
            app:entryValues="@array/click_method_values"
            app:entries="@array/click_method_entries"
            app:defaultValue="@string/default_click_method"
            app:persistent="true"
            app:useSimpleSummaryProvider="true"
            />

    <com.baodeep.hackerskeyboard.SeekBarPreferenceStringCompat
            app:defaultValue="@string/default_click_volume"
            app:minValue="0"
            app:maxValue="1"
            app:asPercent="true"
            app:key="pref_click_volume"
            app:title="@string/title_click_volume"
            app:persistent="true"
            />

    <CheckBoxPreference
            app:key="popup_on"
            app:title="@string/popup_on_keypress"
            app:persistent="true"
            app:defaultValue="@bool/default_popup_preview"
            />

</PreferenceScreen>
